--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "type-check": "tsc --noEmit",
+    "db:types": "supabase gen types typescript --project-id YOUR_PROJECT_ID > types/database.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
